dropdown overlap fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1465,7 +1465,7 @@ transition: transform .5s ease;
 }
 
 .dropdown-links {
-  font-size: 16px;
+  font-size: 15px;
   text-decoration: none!important;
   box-shadow: none!important;
 }
